--- a/d3/0_deportations_sankey.html
+++ b/d3/0_deportations_sankey.html
@@ -33,7 +33,7 @@
   <p> <a href="../clean_data/N_RETURNEES_MSNAME_DEST_ROUTES_MIN_15_new.csv" target="_blank">Get the raw data behind this visualisation</a> | <a href="https://www.statewatch.org/deportation-union-rights-accountability-and-the-eu-s-push-to-increase-forced-removals/" target="_blank">Link to full Deportation Union spreadsheet</a> </p>
 </div>
 <div class="caption">
-  <p>Number of deported persons in the time frame between 2006 and 2020, by deporting EU member states and destinations. This graphic only includes the 15 EU states and the 15 destinations with the largest number of deportations in the time period. Both EU states (on the left) as well as destinations are sorted by total number of deported people.</p>
+  <p>Number of deported persons in the time frame between 2006 and 2021 by deporting EU member states and destinations. This graphic only includes the 15 EU states and the 15 destinations with the largest number of deportations in the time period. Both EU states (on the left) as well as destinations are sorted by total number of deported people.</p>
 </div>
 
 <script>
