updating and testing data

--- a/d3/4_operation_types.html
+++ b/d3/4_operation_types.html
@@ -89,7 +89,7 @@ svg.attr("width", width + margin.left) // margin.right should stay empty
 		.attr("class", "x-axis")
 
 	var z = d3.scaleOrdinal()
-		.range(['#d5791f', '#80525c', '#8b8fab'])
+		.range(['#d5791f', '#80525c', '#8b8fab', '#bac5d6'])
 		.domain(keys);
 
 	update(d3.select("#KEY").property("value"), 0)
