updating and testing data

--- a/d3/3_fx_contributions_pp_dest.html
+++ b/d3/3_fx_contributions_pp_dest.html
@@ -15,7 +15,7 @@
   <p> <a href="../clean_data/CONTRIB_PP_BY_DEST_new.csv" target="_blank">Get the raw data behind this visualisation</a> | <a href="https://www.statewatch.org/deportation-union-rights-accountability-and-the-eu-s-push-to-increase-forced-removals/" target="_blank">Link to full Deportation Union spreadsheet</a> </p>
 </div>
 <div class="caption">
-  <p>Frontex contributions for return operations per person by destination. To avoid distorted data, only destinations with at least 10 deported people (across the time period) were included, and only operations with one member state and one destination were considered. All data that fulfills these criteria is from 2016 and later. The 25 destinations with highest Frontex contribution rates per person as well as the overall average are shown.</p>
+  <p>Frontex contributions for return operations per person by destination. To avoid distorted data, only destinations with at least 10 deported people (across the time period) were included. Only operations with exactly one member state and one destination were considered (all of which are from 2016 and later). The average is also based only on these operations. The 25 destinations with highest Frontex contribution rates per person as well as the overall average are shown.</p>
 </div>
 
 
