updated html and readme

--- a/d3/3_fx_contributions_pp_dest.html
+++ b/d3/3_fx_contributions_pp_dest.html
@@ -89,7 +89,8 @@ svg.attr("width", width + margin.left) // margin.right should stay empty
 		.attr("class", "x-axis grey_labels")
 
     var z = d3.scaleOrdinal()
-  		.range(['#7a6989', '#7a6989','#7a6989','#7a6989','#7a6989','#7a6989','#7a6989','#7a6989','#7a6989','#7a6989','#7a6989','#7a6989','#7a6989','#7a6989','#7a6989','#7a6989','#7a6989','#7a6989','#7a6989','#7a6989','#d5791f',
+  		.range(['#7a6989', '#7a6989','#7a6989','#7a6989','#7a6989','#7a6989','#7a6989','#7a6989','#7a6989','#7a6989','#7a6989','#7a6989','#7a6989','#7a6989','#d5791f',
+      '#7a6989','#7a6989','#7a6989','#7a6989','#7a6989','#7a6989',
       '#7a6989','#7a6989','#7a6989','#7a6989','#7a6989','#7a6989','#7a6989','#7a6989','#7a6989','#7a6989','#7a6989','#7a6989','#7a6989',])
   		.domain(data.map(function(d) { return d.iso; }));
 
